--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -6,6 +6,9 @@
         <div class="col">
           <h1>This is the Home Page</h1>
           <p>This is some text</p>
+
+          <img src="/static/images/house.jpg" height="1080" width="1350" />
+          
         </div>
       </div>
     </div>
