generalize custom function, test send AJAX post.

--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -210,14 +210,13 @@
             backdrop: false,
             focusConfirm: false,
             showCancelButton: true,
+
             willOpen: () => {
-              const elem = document.getElementById('reservation-dates-modal');
-              const rp = new DateRangePicker(elem, {
-                showOnFocus: true,
-                orientation: 'top',
-                format: 'dd-mm-yyyy',
-              });
+              if (c.willOpen !== undefined) {
+                c.willOpen();
+              }
             },
+
             preConfirm: () => {
               return [
                 document.getElementById('start').value,
@@ -225,8 +224,9 @@
               ];
             },
             didOpen: () => {
-              document.getElementById('start').removeAttribute('disabled');
-              document.getElementById('end').removeAttribute('disabled');
+              if (c.didOpen !== undefined) {
+                c.didOpen();
+              }
             },
           });
 
