--- a/templates/generals.gohtml
+++ b/templates/generals.gohtml
@@ -84,10 +84,33 @@
           attention.custom({ 
             msg: html, 
             title: 'Choose your date',
+
+            willOpen: () => {
+              const elem = document.getElementById('reservation-dates-modal');
+              const rp = new DateRangePicker(elem, {
+                showOnFocus: true,
+                orientation: 'top',
+                format: 'dd-mm-yyyy',
+              });
+            },
+
+            didOpen: () => {
+              document.getElementById('start').removeAttribute('disabled');
+              document.getElementById('end').removeAttribute('disabled');
+            },
+
             callback: function(result) {
                 console.log("called")
 
-                fetch("/search-availability-json")
+                let form = document.getElementById("check-availability-form")
+                let formData = new FormData(form);
+
+                formData.append("csrf_token", "{{.CSRFToken}}")
+
+                fetch("/search-availability-json", {
+                  method: "post",
+                  body: formData,
+                })
                   .then(response => response.json())
                   .then(data => {
                     console.log(data)
