--- a/templates/search-availability.gohtml
+++ b/templates/search-availability.gohtml
@@ -51,7 +51,7 @@
 const elem = document.getElementById('reservation-dates');
       const rangepicker = new DateRangePicker(elem, {
         // ...options
-        format: "dd-mm-yyyy",
+        format: "yyyy-mm-dd",
         orientation: 'right',
       });
 </script>
