Show Arrival & End date on reservation summary page

--- a/templates/search-availability.gohtml
+++ b/templates/search-availability.gohtml
@@ -53,6 +53,7 @@ const elem = document.getElementById('reservation-dates');
         // ...options
         format: "yyyy-mm-dd",
         orientation: 'right',
+        minDate: new Date(),
       });
 </script>
 {{end}}
