--- a/templates/generals.gohtml
+++ b/templates/generals.gohtml
@@ -80,7 +80,7 @@
                 </div>
               </div>
             </form>
-          `;
+          `
           attention.custom({ 
             msg: html, 
             title: 'Choose your date',
@@ -90,7 +90,8 @@
               const rp = new DateRangePicker(elem, {
                 showOnFocus: true,
                 orientation: 'top',
-                format: 'dd-mm-yyyy',
+                format: 'yyyy-mm-dd',
+                minDate: new Date(),
               });
             },
 
@@ -106,6 +107,7 @@
                 let formData = new FormData(form);
 
                 formData.append("csrf_token", "{{.CSRFToken}}")
+                formData.append("room_id", "1")
 
                 fetch("/search-availability-json", {
                   method: "post",
@@ -113,7 +115,27 @@
                 })
                   .then(response => response.json())
                   .then(data => {
-                    console.log(data)
+                    if (data.ok) {
+                      console.log("room is available")
+                      attention.custom({
+                        icon: "success",
+                        showConfirmButton: false,
+                        msg: '<p>Room is available</p>'
+                            + '<p><a href="/book-room?id='
+                            + data.room_id
+                            + '&s='
+                            + data.start_date
+                            + '&e='
+                            + data.end_date
+                            + '" class="btn btn-primary">'
+                            + 'Book Now!</a></p>',
+                      })
+                    } else {
+                      console.log("room is not available")
+                      attention.error({
+                        msg: "No availability"
+                      })
+                    }
                   })
             }, 
           });
