--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -26,6 +26,7 @@
     />
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css" />
   </head>
+  <body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -117,9 +118,12 @@
     <script src="
     https://cdn.jsdelivr.net/npm/sweetalert2@11.7.1/dist/sweetalert2.all.min.js
     "></script>
-        {{block "js" .}}
+    <script src="/static/js/app.js"></script>
 
-        {{end}}
+    {{block "js" .}}
+
+    {{end}}
+
     <script>
       let attention = prompt();
       (function () {
@@ -172,99 +176,6 @@
        {{with .Warning}}
       notify("{{.}}", "warning")
       {{end}}
-
-      function prompt() {
-        let toast = function (c) {
-          const { msg = '', icon = 'success', position = 'top-end' } = c;
-          const Toast = Swal.mixin({
-            toast: true,
-            title: msg,
-            position: position,
-            icon: icon,
-            showConfirmButton: false,
-            timer: 3000,
-            timerProgressBar: true,
-            didOpen: (toast) => {
-              toast.addEventListener('start', Swal.stopTimer);
-              toast.addEventListener('end', Swal.resumeTimer);
-            },
-          });
-
-          Toast.fire({});
-        };
-
-        let success = function (c) {
-          const { msg = '', title = '', footer = '' } = c;
-          Swal.fire({
-            icon: 'success',
-            title: title,
-            text: msg,
-            footer: footer,
-          });
-        };
-
-        let error = function (c) {
-          const { msg = '', title = '', footer = '' } = c;
-          Swal.fire({
-            icon: 'error',
-            title: title,
-            text: msg,
-            footer: footer,
-          });
-        };
-
-        async function custom(c) {
-          const { msg = '', title = '', icon = '', showConfirmButton = true } = c;
-
-          const { value: result } = await Swal.fire({
-            icon: icon,
-            title: title,
-            html: msg,
-            backdrop: false,
-            focusConfirm: false,
-            showCancelButton: true,
-            showConfirmButton: showConfirmButton,
-
-            willOpen: () => {
-              if (c.willOpen !== undefined) {
-                c.willOpen();
-              }
-            },
-
-            preConfirm: () => {
-              return [
-                document.getElementById('start').value,
-                document.getElementById('end').value,
-              ];
-            },
-            didOpen: () => {
-              if (c.didOpen !== undefined) {
-                c.didOpen();
-              }
-            },
-          });
-
-          if (result) {
-            if (result.dismiss !== Swal.DismissReason.cancel) {
-              if (result.value !== "") {
-                if (c.callback !== undefined) {
-                  c.callback(result);
-                }
-              } else {
-                c.callback(false)
-              }
-            } else {
-              c.callback(false)
-            }
-          }
-        }
-        return {
-          toast: toast,
-          success: success,
-          error: error,
-          custom: custom,
-        };
-      }
     </script>
   </body>
 </html>
