--- a/templates/majors.gohtml
+++ b/templates/majors.gohtml
@@ -79,8 +79,65 @@
                 </div>
               </div>
             </form>
-          `;
-          attention.custom({ msg: html, title: 'Choose your date' });
+          `
+          attention.custom({ 
+            msg: html, 
+            title: 'Choose your date',
+
+            willOpen: () => {
+              const elem = document.getElementById('reservation-dates-modal');
+              const rp = new DateRangePicker(elem, {
+                showOnFocus: true,
+                orientation: 'top',
+                format: 'yyyy-mm-dd',
+                minDate: new Date(),
+              });
+            },
+
+            didOpen: () => {
+              document.getElementById('start').removeAttribute('disabled');
+              document.getElementById('end').removeAttribute('disabled');
+            },
+
+            callback: function(result) {
+                console.log("called")
+
+                let form = document.getElementById("check-availability-form")
+                let formData = new FormData(form);
+
+                formData.append("csrf_token", "{{.CSRFToken}}")
+                formData.append("room_id", "2")
+
+                fetch("/search-availability-json", {
+                  method: "post",
+                  body: formData,
+                })
+                  .then(response => response.json())
+                  .then(data => {
+                    if (data.ok) {
+                      console.log("room is available")
+                      attention.custom({
+                        icon: "success",
+                        showConfirmButton: false,
+                        msg: '<p>Room is available</p>'
+                            + '<p><a href="/book-room?id='
+                            + data.room_id
+                            + '&s='
+                            + data.start_date
+                            + '&e='
+                            + data.end_date
+                            + '" class="btn btn-primary">'
+                            + 'Book Now!</a></p>',
+                      })
+                    } else {
+                      console.log("room is not available")
+                      attention.error({
+                        msg: "No availability"
+                      })
+                    }
+                  })
+            }, 
+          });
         });
     </script>
 {{end}}
