--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -93,6 +93,15 @@
               >Contact</a
             >
           </li>
+            <li class="nav-item">
+            <a
+              class="nav-link"
+              href="/login"
+              tabindex="-1"
+              aria-disabled="true"
+              >Login</a
+            >
+          </li>
         </ul>
       </div>
     </div>
