--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,7 +4,8 @@
 <div class="row">
 <div class="col">
     <h1>Login</h1>
-    <form>
+    <form method="post" action="/login">
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
         <div class="form-group mt-4">
             <label for="email">Email</label>
             {{with .Form.Errors.Get "email"}}
